results/classifier/zero-shot/108/graphic/2038
graphic: 0.953
device: 0.829
PID: 0.825
files: 0.641
debug: 0.616
vnc: 0.607
semantic: 0.580
performance: 0.553
network: 0.506
other: 0.439
socket: 0.359
permissions: 0.250
boot: 0.239
KVM: 0.223

simpletrace.py does nothing, and syntax error when called from bash script
Description of problem:
The simpletrace python script appears to do nothing when I run it as above. 

It appears to run (but do nothing) when called from my terminal but there is also a syntax error when I run it from the bash script above.

```
SyntaxError: invalid syntax
  File "<fstring>", line 1
    (pid=)
        ^
```

I think this syntax error is caused by the line `print(f'{event.name} {delta_ns / 1000:0.3f} {pid=} ' + ' '.join(fields))`
Additional information:

